--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.jpa.show-sql=true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 # Using "create" will delete and recreate the tables every time the project is started
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
